--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Funtasy-Wood</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Wood</a>
         
         <button dir="rtl" class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           תפריט
@@ -269,7 +269,7 @@
           </div>
 
           <div dir="rtl"  class="col-lg-4 mr-auto" style="float:right">
-            <p dir="rtl" class="lead">  Funtasy-Wood 
+            <p dir="rtl" class="lead">  Wood 
               הוקמה 
               בשנת 2007  ורכשה ניסיון רב ע"י נתינת שירות אדיב מיקצועי והעיקר הבנת הלקוחות.
  כדי לשמר את לקוחותינו אנו מקפידים על שימוש בחומרי גלם הטובים ביותר, גימור מושלם, וליווי באחריות המוצרים</p>
